fashion-final-project/src/Components/Navigation/Navigation.css
.navbar {
  width: 100vw;
}
.ColNav-HomeLink {
  display: none;
}

.nav-collapse {
  width: 100vw;
}
.L-nav {
  background-color: #2c6a67;
  border-top-right-radius: 7px;
  border-bottom-right-radius: 7px;
  box-shadow: 5px -6px #649b98;
  display: flex;
  justify-content: space-evenly;
  height: 5rem;
  align-items: center;
  width: 100%;
}
.R-nav {
  background-color: #2c6a67;
  border-top-left-radius: 7px;
  border-bottom-left-radius: 7px;
  box-shadow: -5px -6px #649b98;
  display: flex;
  justify-content: space-evenly;
  height: 5rem;
  align-items: center;
  width: 100%;
}

.nav-btn {
  color: #fff !important;
  text-decoration: none;
  font-family: "Style Script";
  font-size: 2.5rem;
  cursor: pointer;
}
.nav-btn:hover {
  color: #e7bd44 !important;
}

.nav-shoppingBtn {
  border: none;
  background-color: #2c6a67;
  color: #fff;
  text-decoration: none;
  font-size: 2.3rem;
  cursor: pointer;
  display: flex;
  align-items: center;
  justify-content: center;
}
.nav-shoppingBtn:hover {
  color: #e7bd44;
}

.nav-img {
  margin-left: 3rem;
  margin-right: 3rem !important;
}
.nav-logo {
  height: 8rem;
}

@media (max-width: 1139px) {
  .nav-btn {
    color: #fff !important;
    text-decoration: none;
    font-family: "Style Script";
    font-size: 2rem;
  }
}

@media (max-width: 964px) {
  .nav-btn {
    color: #fff !important;
    text-decoration: none;
    font-family: "Style Script";
    font-size: 1.5rem;
  }
}

@media (max-width: 814px) {
  .nav-btn {
    color: #fff !important;
    text-decoration: none;
    font-family: "Style Script";
    font-size: 1.3rem;
  }
}
@media (max-width: 767px) {
  .nav-collapse {
    width: 100vw;
    text-align: center;
  }
  .nav-img {
    display: none;
  }
  .Nav-homeLink {
    display: none;
  }
  .nav-logo {
    display: none;
  }
  .L-nav {
    margin-top: 1rem;
    height: 8rem;
    box-shadow: none;
    border-top-right-radius: 0;
    border-bottom-right-radius: 0;
  }
  .R-nav {
    height: 8rem;
    box-shadow: none;
    border-top-left-radius: 0;
    border-bottom-left-radius: 0;
    padding-bottom: 0.5rem;
  }
  .nav-toggle > .navbar-toggler-icon {
    background-image: url(../Images/BF-icon.png) !important;
  }
  .nav-toggle {
    padding: none;
    font-size: 3rem !important;
    line-height: 1;
    border: none;
    border-radius: 0.25rem;
    transition: box-shadow 0.15s ease-in-out;
    color: #2c6a67 !important;
  }
  .navbar {
    justify-content: center !important;
    width: 100%;
  }
  .ColNav-HomeLink {
    display: flex;
    justify-content: center;
    font-family: "Style Script";
    font-size: 1.3rem;
    text-decoration: none;
    color: #fff;
    background-color: #2c6a67;
    cursor: pointer;
  }
  .ColNav-HomeLink:hover {
    color: #e7bd44;
  }
  .nav-shoppingBtn {
    border: none;
    background-color: #2c6a67;
    color: #fff;
    text-decoration: none;
    font-size: 1.5rem;
    cursor: pointer;
    display: flex;
    align-items: center;
    justify-content: center;
  }
  .nav-shoppingBtn:hover {
    color: #e7bd44;
  }
}

